--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My-Assignment-practisc</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <section class="first-section">
+      <div class="first-div">
+        <h1>Welcome To</h1>
+        <h1><span class="fisrt-line">Nayeem Shikder</span> World</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>
+          You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
+          That's why I am learning and mastering web development. I will not stop until I become the Web Development
+          Hero.
+        </p>
+        <a class="ancore-tag" href="">HIRE ME</a>
+      </div>
+      <div class="first-div">
+        <img src="images/love.png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
